--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "midtrans/midtrans-php": "^2.6",
+        "pusher/pusher-php-server": "^7.2",
         "xendit/xendit-php": "^7.0"
     },
     "require-dev": {
